fix(scrollbar): set scrollbar corner background in tables

--- a/assets/css/_page/_single.scss
+++ b/assets/css/_page/_single.scss
@@ -208,6 +208,17 @@
             background-color: $table-background-color-black;
           }
         }
+
+        ::-webkit-scrollbar-corner {
+          background-color: $table-background-color;
+
+          [theme=dark] & {
+            background-color: $table-background-color-dark;
+          }
+          [theme=black] & {
+            background-color: $table-background-color-black;
+          }
+        }
       }
 
       > table {
